<resources>
    <string name="app_name" translatable="false">Money App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="log_in">Login</string>
    <string name="registration">Registration</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="select_gender">Select gender:</string>

    <string name="male">Male</string>
    <string name="female">Female</string>

    <string name="birthday">Birthday:</string>
    <string name="select_date">Select</string>

    <string name="home_address" translatable="false">Home Address Khreshtik street 58, Kyiv, Ukraine</string>
    <string name="email" translatable="false">Email</string>
    <string name="phone" translatable="false">Phone +380-XX-XXX-XX-XX</string>

    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>

    <string name="register_btn">Register</string>
    <string name="cancel_btn">Cancel</string>

    <string name="failure_auth">Login or password is not correctly!</string>


    <!-- Message for login/registration-->
    <string name="message_empty_fields">Fields can not be empty!</string>
    <string name="message_error_login">The email or password don\'t correctly!</string>
    <string name="message_error_data">The user information is not correct!</string>
    <string name="password_error">The password is not in the correct format. Minimum:\n
            8 characters, max. 20, exclusively English;\n
            3 liters upper/lower register;\n
            One Liter Upper Register;\n
            One Symbol;\n
            One symbol;\n
            One number;\n
            One number;\n
            Also, the password must not contain your PIN, birth date, email, phone number, or easy keys (qwerty, abbreviated)\n
            (qwerty, abcd, password, etc.).</string>
    <string name="passwords_not_identical">Passwords do not match!</string>

    <string name="years">The client\'s age cannot be less than 16 years!</string>

    <string name="home_menu_item">Home</string>
    <string name="cards_menu_item">Cards</string>
    <string name="transactions_menu_item">Transactions</string>
    <string name="profile_menu_item">Profile</string>

    <string name="greeting" translatable="false">Good Morning!</string>
    <string name="available_text">Available Balance</string>

    <string name="service_transfer">Transfer</string>
    <string name="service_bill">Bills</string>
    <string name="service_recharge">Recharge</string>
    <string name="service_more">More</string>

    <string name="my_card_header">My Cards</string>

    <string name="my_transaction_header">Recent Transactions</string>

    <string name="view_all_btn_text"><u>View All</u></string>

    <string name="visa_txt" translatable="false">Visa Card</string>
    <string name="master_text" translatable="false">Master Card</string>

    <string name="make_payment_text">Make a Payment</string>

    <string name="view_statement_txt">View Statement</string>
    <string name="change_pin_txt">Change Pin</string>
    <string name="remove_card_txt">Remove Card</string>

    <string name="transaction_caption">Transactions</string>

    <string name="select_time_txt"><u>Select Time Range</u></string>
    <string name="recent_caption"><u>Recent</u></string>

    <string name="all_text">All</string>
    <string name="income_txt">Income</string>
    <string name="expense_txt">Expense</string>

    <!-- Account-->
    <string name="account_title">Account</string>
    <string name="text_alpaca" translatable="false">Alpaca</string>
    <string name="text_holder_name">Card Holder Name</string>
    <string name="txt_expiry_date">Expiry date</string>
    <string name="detail_info">Detail information</string>

    <string name="account_name">Name</string>
    <string name="account_phone_number">Phone Number</string>
    <string name="account_email" translatable="false">E-mail</string>
    <string name="account_home_address">Home Address</string>

    <string name="transfer_header">Transfer</string>
    <string name="from_text">From</string>
    <string name="account_txt">Account</string>
    <string name="to_txt">To</string>
    <string name="amount_txt">Amount</string>
    <string name="purpose_txt">Purpose</string>
    <string name="send_btn_txt">Send</string>

    <string name="recipient_number">Enter recipient number:</string>
    <string name="failure_user">User\'s number is wrong!</string>

    <string name="failure_payment">The sum is incorrect!</string>

    <string-array name="pay_services_array">
        <item>Education</item>
        <item>Communal services</item>
        <item>Transfer to card</item>
    </string-array>


    <!-- Successful fragment-->

    <string name="recipient_number_title">Recipient\'s number</string>
    <string name="transaction_successful">Transaction Successful</string>
    <string name="detail_transaction">Detail Transaction</string>
    <string name="share_receipt">Share Receipt</string>
    <string name="btn_done">Done</string>

    <string name="lang_txt">Language</string>

</resources>